<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicine">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:src="@drawable/medicalkit"/>
            </FrameLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/backgroundcolor"
                android:gravity="center"
                android:paddingTop="17dp"
                android:text="@string/data_obat"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:adjustViewBounds="true"
                        android:paddingTop="15dp"
                        android:src="@drawable/quantity" />
                </FrameLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kd_obat"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingTop="25dp"
                    android:textSize="20sp" />
            </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:adjustViewBounds="true"
                            android:paddingTop="15dp"
                            android:src="@drawable/pills" />
                    </FrameLayout>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_obat"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingTop="25dp"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center">
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/jumlah_obat"
                    android:textColor="@android:color/black"
                     android:textStyle="bold"/>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center">
                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="16dp"
                            android:text="+"/>
                        <TextView
                            android:id="@+id/jml"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:text="0"
                            android:textStyle="bold"/>
                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginBottom="16dp"
                            android:text="-"/>
                    </TableRow>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/jenis_obat"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
                    <Spinner
                        android:id="@+id/jenis"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:padding="5dp"
                        android:entries="@array/jenis_obat">
                    </Spinner>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:adjustViewBounds="true"
                            android:paddingTop="15dp"
                            android:src="@drawable/budget" />
                    </FrameLayout>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/harga_obat"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingTop="25dp"
                        android:textSize="20sp" />
                </TableRow>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="20dp">
                    <TableRow
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">
                        <ImageView
                            android:paddingLeft="9dp"
                            android:paddingRight="20dp"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:src="@drawable/add"
                            android:layout_centerVertical="true"
                            android:id="@+id/add"/>
                        <ImageView
                            android:paddingLeft="9dp"
                            android:paddingRight="20dp"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:src="@drawable/save"
                            android:layout_centerVertical="true"
                            android:id="@+id/save"/>
                        <ImageView
                            android:paddingLeft="9dp"
                            android:paddingRight="20dp"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:src="@drawable/edit"
                            android:layout_centerVertical="true"
                            android:id="@+id/edit"/>
                        <ImageView
                            android:paddingRight="20dp"
                            android:paddingLeft="9dp"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:src="@drawable/delete"
                            android:layout_centerVertical="true"
                            android:id="@+id/delete"/>
                    </TableRow>
                </RelativeLayout>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>